Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19452

main.func_debug failed in buildbot with wrong (garbage) result

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/win32-debug/builds/13951/steps/test/logs/stdio

      10.3 0c188d5e

      main.func_debug                          w2 [ fail ]
              Test ended at 2019-05-13 12:44:48
       
      CURRENT_TEST: main.func_debug
      --- D:/win32-debug/build/src/mysql-test/main/func_debug.result	2019-05-13 11:43:54.468814000 +0000
      +++ D:\win32-debug\build\src\mysql-test\main\func_debug.reject	2019-05-13 12:44:47.962436000 +0000
      @@ -1671,6 +1671,6 @@
       2
       9
       Warnings:
      -Note	1105	DBUG: Item_subselect::exec (select max(`test`.`t1`.`a`) from `test`.`t1`)
      +Note	1105	DBUG: Item_subselect::exec (select max(`test`.`t1`.`a`) from `test`.`t1`)t
       DROP TABLE t1;
       SET SESSION debug_dbug="-d,Item_subselect";
       
      mysqltest: Result length mismatch
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.