MDEV-19452 - fix incorrect push_warning_printf

String is not guaranteed to be null-terminated, thus push_warning_printf
also needs to specify the length.